# libpafe

./: .gitignore  ChangeLog  INSTALL  configure.ac
debian/: changelog  control  copyright  libpafe-dev.install  libpafe.substvars  libpafe.udev  watch
src/: felica_command.c  felica_command.h  libpafe.h  pasori_command.c  pasori_command.h
tests/: pasori_test.c
